# Ohanna-Installer

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  ohanna-installer-v1.0.0-configurations-and-manifest.patch  pyproject.toml  requirements-dev.txt  t -qq
config/: release-manifest.yaml
docs/: Architecture.md  Installation.md
release-check/agent/: SHA256SUMS  ohana_agent-1.0.0-py3-none-any.whl  ohanna_agent-1.0.0-py3-none-any.whl
src/ohana_installer/: __init__.py  __main__.py  administration.py  cli.py  confirmation.py  environment.py  github.py  manifest.py  python_package.py  system_account.py  systemd.py  version.py
src/ohana_installer/commands/: __init__.py  install.py  uninstall.py  update.py
src/ohanna_installer/: __init__.py  __main__.py  cli.py  environment.py  github.py  manifest.py  python_package.py  system_account.py  systemd.py  version.py
src/ohanna_installer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ohanna_installer/commands/: __init__.py  install.py  uninstall.py  update.py
tests/: test_administration.py  test_cli.py  test_configuration_installation.py  test_confirmation.py  test_environment.py  test_github.py  test_manifest.py  test_python_package.py  test_system_account.py  test_systemd.py  test_uninstall.py  test_update.py
