[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ohanna-installer"
version = "1.0.0"
description = "Installateur officiel de l'écosystème Ohanna"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Cédric Harnois" },
]
keywords = [
    "ohanna",
    "installer",
    "deployment",
    "systemd",
    "linux",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "PyYAML>=6.0",
]


[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.12",
]


[project.scripts]
ohanna = "ohanna_installer.cli:main"


[project.urls]
Repository = "https://github.com/cedric-HAOS/Ohanna-Installer"
Issues = "https://github.com/cedric-HAOS/Ohanna-Installer/issues"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]


[tool.coverage.run]
branch = true
source = ["ohanna_installer"]


[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80


[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]


[tool.ruff.lint.isort]
known-first-party = ["ohanna_installer"]