[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ohana-installer"
version = "1.0.0"
description = "Installateur officiel de l'écosystème Ohana"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Cédric Harnois" },
]
keywords = [
    "ohana",
    "installer",
    "deployment",
    "systemd",
    "linux",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "PyYAML>=6.0",
]


[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.12",
]


[project.scripts]
ohana = "ohana_installer.cli:main"


[project.urls]
Repository = "https://github.com/cedric-HAOS/Ohana-Installer"
Issues = "https://github.com/cedric-HAOS/Ohana-Installer/issues"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]


[tool.coverage.run]
branch = true
source = ["ohana_installer"]


[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80


[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]


[tool.ruff.lint.isort]
known-first-party = ["ohana_installer"]
